--- a/baitap3/style.css
+++ b/baitap3/style.css
@@ -44,6 +44,10 @@ h2 {
     float: left;
 }
 
+.content p{
+    margin: 5px 0;
+}
+
 input[type=button] {
     width: 100%;
     background-color: #4CAF50;
